# lv_port_esp32

./: CMakeLists.txt  Makefile  partitions.csv
components/: master.zip.1
main/: CMakeLists.txt  Kconfig.projbuild  adc_event.c  adc_event.h  blink.c  blink.h  component.mk  gui.c  gui.h  https_ota.c  https_ota.h  img_icon_png.c  main.c  testpage_ui.c  testpage_ui.h
